Capstone/dice.css
body {
    margin: 0 auto;
    font-family: "Roboto", monospace;

}

/* Header settings */
header {
    background-image: linear-gradient(#fdfdfd8c, #0408f027, transparent), url("/Capstone/assets/diceHeader.png");
    background-size: cover;
    margin: auto;
    padding: 1rem 1.2rem 6rem 1.5rem;
    color: rgb(9, 9, 160);
    

}

main {
    padding: 1rem;
    max-width: 60rem;
    margin: 0 auto;
    
}

header h1 {
    margin: 0;
    font-size: 3rem;
    font-family: 'Poppins', sans-serif;
    

}

header h2 {
    margin-top: 0;
    color: white;
    font-size: 2rem;
    text-shadow: 1px 1px 3px black;
}

button{
    background-color: rgb(9, 9, 160);
    color: white;
    padding: 1rem; 
    border-radius: 1rem;
    margin-bottom: .2rem;
}

#greeting{
    max-width: 90%;
    margin: 1rem auto;
}

#topInfo{
    margin-left: 13%;
  
}

.diceStatus {
    border: 2px black solid;
    padding: .5rem;
    margin-left: 1rem;
    width: 460px;
    height: 205px;
    background-color: white;
    text-align: center;
    
}

#topInfo p {
    margin: 0;
}

.messageBox {
    width: 200px;
    border: 2px black solid;
    padding: 1rem;
    font-size: .5rem;
    display: none;
    background-color: white;
}

.messageBox h2{
    padding-bottom: .4rem;
}

.totals {
    display: none;
    padding: .5rem 1rem;
    border: 2px black solid;
    margin-right: 1rem;
    background-color: white;

}

.totals p{
    margin: 0 0 0 .2rem;
}

#intro {
    max-width: 70%;
    
}

#topInfo {
    margin-bottom: 2rem;
}

#theGame {
    display: none;
}

#gameBoard {
    display: flex;    
}

#gameBoard h2 {
    margin: 0;
} 

#startButton {
    margin: 0 auto;
    text-align: center;
    
}

#startButton button {
    width: 20%;
    font-size: 1.5rem;
}

#gameBoard img {
    max-width: 100px;
    margin: 0 auto;
    padding: .4rem;

}
.gameBorder {
    border: 2px black solid;
    padding: 1rem;
    margin: 1rem auto;
    max-width: 47rem;
    background-color: rgb(9, 9, 160);
    
}

.endBoard{
    display: block;
    max-width: 10rem;

}

#endBoard div{
    margin-left: 1rem;
    
}

@media (max-width: 600px) {
#gameBoard {
    display: block;
}

#intro{max-width: 98%;}

button{
    margin:0 auto;
}

#startButton button {
    width: 80%;
    font-size: 1rem;
}

.messageBox {
    padding: 1rem;
    text-align: center;
    width: unset;
    margin: 0;
    margin-bottom: 20px;
    ;
}

#topInfo{
    margin-left: 2%;

    
}

.diceStatus {
    width: unset;
    margin: 0;
    
}

.messageBox h2 {
    padding-bottom: .5rem;
}

#gameBoard img {
    margin: 0 auto;
    padding: .5rem;
}

.totals{
    margin-right: 0;
    margin-bottom: 1rem;
}
}

